trying to fix this shit on mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -353,12 +353,15 @@ table {
 }
 .blah th {
   font-size: 1em;
-  line-height: 1.5;
+  line-height: .9;
   font-weight: normal;
   /*background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;*/
   font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+  /*text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);*/
+  /*border: 3px solid #ebebeb;*/
+  /*padding: 5px;*/
   color: #323232;
+  line-height:.9;
 }
 
 .blah td {
@@ -368,7 +371,12 @@ table {
   font-weight: normal;
   text-align: left;
   vertical-align: middle;
+  /*padding: 5px;*/
+  line-height:.9;
   /*font-weight: 300;*/
+}
+.blah tr {
+  /*padding: 5px;*/
 }
 
 .iconthing {
@@ -393,7 +401,7 @@ table {
     font-size: 3.0em;
   }
   header h2,h2{
-    font-size: .9em;
+    font-size: 1.2em;
   }
   h2{
     font-weight: bold;
@@ -410,5 +418,9 @@ table {
   .inner {
     width: 94%;
     margin: 0 auto;
+  }
+  .blah td{
+    padding: 5px;
+
   }
 }
